# open_cripto_bot

./: .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  bot.py  bot_prompts.py  bot_tools.py
